<resources>
    <string name="app_name">COM-MA</string>

    <string name="access_token">accessToken</string>
    <string name="nickname">nickname</string>
    <string name="search_word">searchWord</string>

    <string name="form_data_video_key">file</string>

    <string name="client_id_android">946848719057-qm2dicelojce0i9qo76i4ia82etne4cp.apps.googleusercontent.com</string>
    <string name="client_id_web">946848719057-10a9o0g40b346nvde0qsvjc9rhif08ef.apps.googleusercontent.com</string>

    <string name="title_home">홈</string>
    <string name="title_card">단어 카드</string>
    <string name="title_camera">카메라 인식</string>
    <string name="title_content">동화</string>
    <string name="title_emoji">감정</string>

    <string name="home_tv_greeting">님, 반가워요!</string>
    <string name="home_tv_event_cheering">오늘도 한판 채우기!</string>
    <string name="home_tv_word_card">단어 카드</string>
    <string name="home_tv_word_card_description">필요한 단어들을 바로바로 확인해요!</string>
    <string name="home_tv_watch_popular_fairytale">인기 동화 보기</string>
    <string name="home_tv_watch_popular_fairytale_description">재미있는 동화와 함께 익혀보아요!</string>
    <string name="home_btn_more">더보기</string>
    <string name="home_event_tv_attend">출석</string>
    <string name="home_event_tv_word">단어</string>
    <string name="home_event_tv_quiz">퀴즈</string>
    <string name="home_event_tv_fairytale">동화</string>
    <string name="home_event_emoji_tv_title">오늘 하루, 서로의 감정을 공유해봐요</string>
    <string name="home_event_emoji_tv_enroll">등록하기</string>

    <string name="card_btn_select">선택</string>
    <string name="card_btn_add_card">단어카드 추가하기</string>
    <string name="card_tv_word_card">단어 카드</string>
    <string name="card_tv_word_card_description">필요한 단어들을 바로바로 확인해요!</string>
    <string name="card_tv_align_latest">최신순</string>
    <string name="card_tv_align_alphabetical">가나다순</string>

    <string name="card_detail_btn_delete">삭제</string>
    <string name="card_detail_tv_title">단어카드 상세보기</string>
    <string name="card_btn_goback">돌아가기</string>
    <string name="card_tv_sign_method">수화 방법</string>

    <string name="card_select_toolbar_btn_cancle">취소</string>
    <string name="card_select_tv_word_card">단어 카드</string>
    <string name="card_select_tv_word_card_description">원하는 단어를 선택해 퀴즈를 만들어봐요!</string>
    <string name="card_select_btn_delete">삭제하기</string>
    <string name="card_select_btn_make_quiz">퀴즈 만들기</string>
    <string name="card_select_tv_warning">단어를 선택해주세요!</string>

    <string name="card_search_tv_search_word">단어 검색하기</string>
    <string name="card_search_tv_search_word_descr">단어 카드로 등록할 단어들을 검색하세요.</string>
    <string name="card_search_edit_hint_search_word">단어 검색하기</string>
    <string name="card_search_tv_result">가 포함된 결과입니다.</string>

    <string name="card_search_detail_tv_create_card">단어카드 생성</string>
    <string name="card_search_detail_tv_word_info">단어정보</string>
    <string name="card_search_detail_tv_sign_info">수화정보</string>
    <string name="card_search_detail_tv_listen_sound">소리듣기</string>

    <string name="card_search_way_dialog_btn_cancel">취소하기</string>
    <string name="card_search_way_dialog_tv_title">어떤 방식으로 추가하시나요?</string>
    <string name="card_search_way_dialog_tv_search_with_word">단어를\n검색해서 추가</string>
    <string name="card_search_way_dialog_tv_search_with_sign_recog">수화를\n인식해서 추가</string>

    <string name="content_list_title">동화 리스트</string>
    <string name="content_list_description">영상으로 재생되는 동화로 재미있게 학습해요!</string>

    <string name="fairytale_detail_description_title">상세내용</string>
    <string name="fairytale_detail_similar_title">유사한 동화 추천</string>

    <string name="camera_detail_btn_quit">나가기</string>
    <string name="camera_detail_btn_create_card">단어카드 생성</string>
    <string name="camera_detail_btn_see_card">단어카드 보기</string>
    <string name="camera_detail_btn_recog_again">다시 인식하기</string>
    <string name="camera_recog_loading">인식중입니다..</string>

    <string name="quiz_btn_goback">돌아가기</string>
    <string name="quiz_tv_title">정답은 무엇일까요?</string>
    <string name="quiz_btn_next">다음</string>

    <string name="quiz_dialog_text_compliment">우와 대단해요~!\n정답이에요!</string>
    <string name="quiz_dialog_text_sorry">앗 아쉬워요~\n정답이 아니예요</string>
    <string name="quiz_dialog_text_finish">수고했어요~\n퀴즈가 끝났어요!</string>
    <string name="quiz_dialog_btn_continue">계속하기</string>
    <string name="quiz_dialog_btn_finish">끝내기</string>

    <string name="list_align_text_one">한줄 보기</string>
    <string name="list_align_text_two">두줄 보기</string>
    <string name="list_align_text_three">세줄 보기</string>

    <string name="word_card_btn_revert">뒤집기</string>

    <string name="auth_login_edit_id">아이디를 입력하세요</string>
    <string name="auth_login_edit_password">비밀번호를 입력하세요</string>
    <string name="auth_login_text_find_account">계정 찾기</string>
    <string name="auth_login_text_join">회원가입하기</string>
    <string name="auth_login_btn_login">로그인하기</string>
    <string name="auth_login_btn_google_login">구글로 로그인하기</string>

    <string name="auth_nickname_text_title">사용하실\n별명을 알려주세요!</string>
    <string name="auth_nickname_text_mynickname">내 별명</string>
    <string name="auth_nickname_edit_hint">별명을 입력해주세요.</string>
    <string name="auth_nickname_btn_complete">완료했어요!</string>

    <string name="today_feeling_text_descr">오늘 하루의 기분을 스티커로 표현해보세요!</string>
    <string name="today_feeling_text_sub_descr">함께 붙여주세요!</string>
    <string name="today_feeling_text_child">아이</string>
    <string name="today_feeling_text_parents">부모</string>
    <string name="today_feeling_text_select_descr">기분을 등록 할 사람을\n선택해 주세요</string>
    <string name="today_feeling_text_result_comment">서로의 마음에 대해\n더 깊게 살펴보는 시간을 가져보는건 어떨까요?</string>
    <string name="today_feeling_btn_complete">완료하기</string>

    <string name="today_feeling_emoji_title_soso">그저 그래요</string>
    <string name="today_feeling_emoji_title_mad">화나요</string>
    <string name="today_feeling_emoji_title_sad">슬퍼요</string>
    <string name="today_feeling_emoji_title_calm">평온해요</string>
    <string name="today_feeling_emoji_title_depressed">우울해요</string>
    <string name="today_feeling_emoji_title_happy">행복해요</string>
    <string name="today_feeling_emoji_title_proud">뿌듯해요</string>
    <string name="today_feeling_emoji_title_anxious">불안해요</string>
    <string name="today_feeling_emoji_title_idontknow">모르겠어요</string>

    <string name="today_feeling_emoji_day_soso">\&apos;그저 그런 날\&apos;</string>
    <string name="today_feeling_emoji_day_mad">\&apos;화나는 날\&apos;</string>
    <string name="today_feeling_emoji_day_sad">\&apos;슬픈 날\&apos;</string>
    <string name="today_feeling_emoji_day_calm">\&apos;평온한 날\&apos;</string>
    <string name="today_feeling_emoji_day_depressed">\&apos;우울한 날\&apos;</string>
    <string name="today_feeling_emoji_day_happy">\&apos;행복한 날\&apos;</string>
    <string name="today_feeling_emoji_day_proud">\&apos;뿌듯한 날\&apos;</string>
    <string name="today_feeling_emoji_day_anxious">\&apos;불안한 날\&apos;</string>
    <string name="today_feeling_emoji_day_idontknow">\&apos;잘 모르겠는 날\&apos;</string>

    <string name="progress_dialog_tv_wait_a_second">잠시만 기다려주세요...</string>
</resources>