<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_home"
        android:title="@string/title_home"
        android:state_checked="false"/>

    <item
        android:id="@+id/navigation_card"
        android:icon="@drawable/selector_card"
        android:title="@string/title_card" />

    <item
        android:id="@+id/navigation_camera"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_content"
        android:icon="@drawable/selector_dice"
        android:title="@string/title_content" />

    <item
        android:id="@+id/navigation_emoji"
        android:icon="@drawable/selector_emoji"
        android:title="@string/title_emoji" />

</menu>