<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.green.comma.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_card"
        android:name="com.green.comma.ui.card.CardFragment"
        android:label="@string/title_card"
        tools:layout="@layout/fragment_card" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.green.comma.ui.camera.CameraFragment"
        android:label="@string/title_camera"/>

    <fragment
        android:id="@+id/navigation_content"
        android:name="com.green.comma.ui.fairytale.FairytaleFragment"
        android:label="@string/title_content"
        tools:layout="@layout/fragment_fairytale" />

    <fragment
        android:id="@+id/navigation_emoji"
        android:name="com.green.comma.ui.emoji.EmojiFragment"
        android:label="@string/title_emoji"
        tools:layout="@layout/fragment_emoji" />
</navigation>