<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthActivity"
    android:paddingHorizontal="@dimen/horizontal_padding"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_lavender"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/editText_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:paddingHorizontal="32dp"
        android:paddingVertical="14dp"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/shape_edit_white_background"
        android:text="@string/auth_login_edit_id" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:paddingHorizontal="32dp"
        android:paddingVertical="14dp"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/shape_edit_white_background"
        android:text="@string/auth_login_edit_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_find_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_900"
            android:background="@android:color/transparent"
            android:text="@string/auth_login_text_find_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_900"
            android:textAlignment="center"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/pretendard_regular"
            android:text="|" />

        <TextView
            android:id="@+id/tv_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_900"
            android:background="@android:color/transparent"
            android:text="@string/auth_login_text_join" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginHorizontal="2dp"
        android:background="@drawable/shape_button_background"
        android:textSize="18dp"
        android:text="@string/auth_login_btn_login" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_google_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        app:cardCornerRadius="8dp"
        android:outlineSpotShadowColor="@color/gray_700"
        android:elevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="9dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/icon_logo_google"
                android:layout_marginRight="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/auth_login_btn_google_login" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>