<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/horizontal_padding"
    android:id="@+id/ConstraintLayout"
    tools:context=".ui.auth.AuthNicknameActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left"
        app:layout_constraintTop_toTopOf="@+id/ConstraintLayout"
        app:layout_constraintBottom_toBottomOf="@+id/ConstraintLayout"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="31dp"
            android:lineHeight="40dp"
            android:textColor="@color/gray_900"
            android:textSize="30dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/auth_nickname_text_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/auth_nickname_text_mynickname" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_search_background"
            android:paddingVertical="12sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="12dp"
                android:background="@null"
                android:textColorHint="@color/gray_500"
                android:textColor="@color/gray_900"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/auth_nickname_edit_hint"/>

            <ImageButton
                android:id="@+id/imgBtn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17sp"
                android:background="@null"
                android:src="@drawable/ic_btn_x" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_nickname_btn_complete"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_button_background"
        android:fontFamily="@font/pretendard_bold"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="@+id/ConstraintLayout"
        app:layout_constraintBottom_toBottomOf="@+id/ConstraintLayout"
        app:layout_constraintVertical_bias="0.85"/>
</androidx.constraintlayout.widget.ConstraintLayout>