<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.card.SelectCardActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent"
            app:contentInsetStart="0dp">
            <include
                android:id="@+id/include_card_toolbar"
                layout="@layout/item_tool_bar"
                app:isBackExist="@{true}"
                app:isTextBtnExist="@{true}"
                app:btnText="@{@string/card_select_toolbar_btn_cancle}"/>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:id="@+id/text_dashboard"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/horizontal_padding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/pretendard_semibold"
                    android:text="@string/card_select_tv_word_card"
                    android:textColor="@color/gray_900"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_medium"
                    android:paddingVertical="10dp"
                    android:text="@string/card_select_tv_word_card_description"
                    android:textColor="@color/gray_700"
                    android:textSize="16sp" />

            </LinearLayout>

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/compose_view_word_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/main_list_bottom_padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_marginHorizontal="@dimen/horizontal_padding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.9">

            <Button
                android:id="@+id/btn_delete"
                style="@style/bold_18_900"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button_background_gray"
                android:text="@string/card_select_btn_delete"
                android:textColor="@color/gray_500"
                app:backgroundTint="@null" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/bold_14_900"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/vermilion_500"
                    android:visibility="invisible"
                    android:gravity="center"
                    android:paddingBottom="4dp"
                    android:text="@string/card_select_tv_warning" />

                <Button
                    android:id="@+id/btn_make_quiz"
                    style="@style/bold_18_900"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1.2"
                    android:background="@drawable/shape_button_background"
                    android:text="@string/card_select_btn_make_quiz"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>