<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.today.TodayFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="0dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/horizontal_padding">
            <ImageView
                android:layout_width="@dimen/app_bar_logo_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo_lavender" />
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_fill_rect8_908d93ff"
        android:fontFamily="@font/pretendard_bold"
        android:paddingVertical="5dp"
        android:paddingHorizontal="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="12dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/today_feeling_text_descr" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_bold"
        android:textSize="16sp"
        android:textColor="@color/gray_500"
        android:text="@string/today_feeling_text_sub_descr" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="28dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:layout_marginHorizontal="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="11dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btn_sticker_child"
                    android:layout_width="94dp"
                    android:layout_height="94dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shape_stroke_dot_oval_gray100_gray500"
                    android:fontFamily="@font/pretendard_bold"
                    android:textSize="25sp"
                    android:textColor="@color/gray_500"
                    android:text="?"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_bold"
                    android:textSize="14sp"
                    android:textColor="@color/gray_500"
                    android:text="@string/today_feeling_text_child" />
            </LinearLayout>

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="11dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btn_sticker_parents"
                    android:layout_width="94dp"
                    android:layout_height="94dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shape_stroke_dot_oval_gray100_gray500"
                    android:fontFamily="@font/pretendard_bold"
                    android:textSize="25sp"
                    android:textColor="@color/gray_500"
                    android:gravity="center"
                    android:text="?" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_bold"
                    android:textSize="14sp"
                    android:textColor="@color/gray_500"
                    android:text="@string/today_feeling_text_parents" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:src="@drawable/ic_char_child" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:src="@drawable/ic_char_parents" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/pretendard_bold"
        android:textSize="18sp"
        android:textColor="@color/gray_300"
        android:text="@string/today_feeling_text_select_descr" />

</LinearLayout>